--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,29 @@
 astroid==3.2.4
+certifi==2024.8.30
+charset-normalizer==3.3.2
 click==8.1.7
 cmake==3.30.3
+decorator==4.4.2
 dill==0.3.8
 dlib==19.24.6
 face-recognition==1.3.0
 face_recognition_models @ git+https://github.com/ageitgey/face_recognition_models@e67de717267507d1e9246de95692eb8be736ab61
+idna==3.10
+imageio==2.35.1
+imageio-ffmpeg==0.5.1
 isort==5.13.2
 mccabe==0.7.0
+moviepy==1.0.3
 numpy==2.0.2
 opencv-python==4.10.0.84
 pillow==10.4.0
 platformdirs==4.3.3
+proglog==0.1.10
+requests==2.32.3
 setuptools==74.1.2
 tomli==2.0.1
 tomlkit==0.13.2
+tqdm==4.66.5
 typing_extensions==4.12.2
+urllib3==2.2.3
 wheel==0.44.0
